packages/zkdid-server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crelink
  labels:
    name: crelink
    environment: production
